# GCTRealMate

./: .gitignore  CMakeLists.txt  Code.cpp  Code.h  GCTRealMate.cpp  GCTRealMate.sln  GCTRealMate.vcxproj  GCTRealMate.vcxproj.filters  PPCop.cpp  PPCop.h  README.md  build_linux.sh  build_windows.bat  compileGCT.cpp  compileGCT.h
include/: Code.h  PPCop.h  aliasGroup.h  compileGCT.h  macro.h  utility.h
src/: Code.cpp  GCTRealMate.cpp  PPCop.cpp  compileGCT.cpp  utility.cpp
